--- a/style.css
+++ b/style.css
@@ -163,14 +163,14 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
      line-height: 12px;
    }
    
-   .active-title {
+   /* .active-title {
      margin-top: 5px;
      margin-left: 0px;
      font-weight: bold;
      float: left;
      font-family: 'Museosans 500', sans-serif;
      color: #fff; 
-   }
+   } */
 
    .title {
      margin-top: 5px;
@@ -236,26 +236,27 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
     background-size: 40px;
     opacity: 1;
   }
+  
+  .linkedin_button_right {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    padding: 0px;
+    float: right;
+    background-color: transparent;
+    background-image: url("img/linkedin.png");
+    background-position: 0px 0px;
+    background-size: 20px;
+    background-repeat: no-repeat;
+    opacity: 0.6;
+    -webkit-transition: all 300ms ease;
+    transition: all 300ms ease;
+  }
    
-   .gp_watch_dribbble {
-     width: 20px;
-     height: 20px;
-     margin-right: 10px;
-     padding: 0px;
-     float: right;
-     background-color: transparent;
-     background-image: url("http://uploads.webflow.com/57c5dd245cc3aa553acf1266/57c9f75de71ebf3938535fbd_dribbble_work_link.png");
-     background-position: 0px 0px;
-     background-size: 20px;
-     background-repeat: no-repeat;
-     opacity: 0.6;
-     -webkit-transition: all 300ms ease;
-     transition: all 300ms ease;
-   }
-   
-   .gp_watch_dribbble:hover {
-     opacity: 1;
-   }
+  .linkedin_button_right:hover {
+    background-image: url("img/linkedin_hover.png");
+    opacity: 1;
+  }
    
    .case_study {
      float: right;
